--- a/Jogador/jogador.css
+++ b/Jogador/jogador.css
@@ -1,21 +1,57 @@
 body {
-    background-color: #666666;
-    color: #ffffff;
+    background-image: url(/img/jogadores.jpg);
     font-family: Arial, sans-serif;
 }
 
 header {
+    position: relative;
     margin-bottom: 2rem;
 }
 
-h1, h2, h3 {
-    color: #ffffff; 
+.logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 25px;
+}
+
+.logo-container img {
+    width: 170px;
+}
+
+.logo-container h1 {
+    font-size: 30px;
+    color: #80e5c8;
+    text-shadow: 2px 2px 3px #1a1a1a;
+}
+
+.back-button {
+    position: absolute;
+    padding: 0% 2%;
+    top: 0px;
+    left: 0px;
+    font-size: 25px;
+    color: #80e5c8;
+    text-decoration: none;
+    background-color: #1a1a1a;
+    font-weight: bold;
+}
+
+.back-button:hover {
+    color: #64c8aa;
+}
+
+h1,
+h2,
+h3 {
+    color: #ffffff;
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-flow: dense; /* Allows grid items to fill in gaps */
+    grid-auto-flow: dense;
+    /* Allows grid items to fill in gaps */
     gap: 1rem;
 }
 
@@ -27,8 +63,8 @@ h1, h2, h3 {
 }
 
 section {
-    background-color: #1a1a1a; 
-    color: #ffffff; 
+    background-color: #1a1a1a;
+    color: #ffffff;
     padding: 1.5rem;
     border-radius: 0.5rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -42,8 +78,8 @@ section h2 {
 }
 
 button {
-    background-color: #d32f2f; 
-    color: #ffffff; 
+    background-color: #5ead97;
+    color: #ffffff;
     border: none;
     padding: 0.25rem 0.25rem;
     border-radius: 0.50rem;
@@ -52,28 +88,41 @@ button {
 }
 
 button:hover {
-    background-color: #b81313; 
+    background-color: rgb(128, 229, 200);
 }
 
-input, textarea, select {
+input,
+textarea,
+select {
     width: 100%;
     padding: 0.75rem;
-    border: 1px solid #444444; 
+    border: 1px solid #444444;
     border-radius: 0.25rem;
     background-color: #333333;
-    color: #ffffff; 
+    color: #ffffff;
     margin-bottom: 1rem;
 }
 
-input::placeholder, textarea::placeholder {
-    color: #bbbbbb; 
+input::placeholder,
+textarea::placeholder {
+    color: #bbbbbb;
 }
 
 .btn-min-max {
-    padding: 0.25rem 0.75rem;
-    height: 35px;
     width: 35px;
-    border-radius: 100%;
+    height: 35px;
+    display: inline-flex; /* Usar flexbox para centralizar o conteúdo */
+    align-items: center; /* Centraliza verticalmente */
+    justify-content: center; /* Centraliza horizontalmente */
+    border: none; /* Remove bordas padrão do botão */
+    background-color: #5ead97; /* Cor de fundo do botão */
+    color: #fff; /* Cor do texto do botão */
+    font-size: 20px; /* Tamanho da fonte do texto */
+    cursor: pointer; /* Cursor de ponteiro ao passar sobre o botão */
+    border-radius: 100%; /* Faz o botão redondo */
+    padding: 0; /* Remove qualquer padding padrão */
+    box-sizing: border-box; /* Inclui bordas e padding no tamanho total */
+    flex-shrink: 0; /* Impede que o botão encolha */
 }
 
 .hidden {
@@ -108,8 +157,10 @@ input::placeholder, textarea::placeholder {
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.5);
     width: 100vw;
     max-width: 90vw;
-    max-height: 80vh; /* Define uma altura máxima */
-    overflow-y: auto; /* Permite rolagem vertical */
+    max-height: 80vh;
+    /* Define uma altura máxima */
+    overflow-y: auto;
+    /* Permite rolagem vertical */
 }
 
 .text-box {
@@ -141,16 +192,19 @@ table {
     margin-top: 1rem;
 }
 
-th, td {
-    border: 1px solid #444444; 
+th,
+td {
+    border: 1px solid #444444;
     padding: 0.75rem;
 }
 
 th {
-    background-color: #333333; 
+    background-color: #333333;
 }
 
-td, li, ul {
+td,
+li,
+ul {
     background-color: #1a1a1a;
 }
 
