--- a/Jogador/jogador.css
+++ b/Jogador/jogador.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(/img/jogadores.jpg);
     font-family: Arial, sans-serif;
-    color: #ffffff;
+    background-size: cover;
 }
 
 header {
