--- a/Jogador/jogador.css
+++ b/Jogador/jogador.css
@@ -224,6 +224,23 @@ ul {
     margin-bottom: 1rem;
 }
 
+.item-list-card, .spell-list-card {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+    
+    justify-content: space-between;
+    align-items: center;
+}
+
+.item-buttons, .spell-buttons {
+    display: flex;
+    gap: 10px;
+    justify-content: end;
+}
+
+
 #item-cards-container {
     display: flex;
     flex-wrap: wrap;
