--- a/Jogador/jogador.css
+++ b/Jogador/jogador.css
@@ -34,7 +34,7 @@ header {
     font-size: 25px;
     color: #80e5c8;
     text-decoration: none;
-    background-color: #1a1a1a;
+    background-color: #1a1a1acc;
     font-weight: bold;
 }
 
@@ -60,7 +60,6 @@ h3 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-flow: dense;
-    /* Allows grid items to fill in gaps */
     gap: 1rem;
 }
 
@@ -69,6 +68,7 @@ h3 {
     border-width: 1px;
     padding: 5px;
     border-color: white;
+    background-color: #1a1a1a11;
 }
 
 section {
