--- a/Jogador/jogador.css
+++ b/Jogador/jogador.css
@@ -142,7 +142,7 @@ textarea::placeholder {
     display: flex;
 }
 
-.fixed {
+.modal {
     display: none;
     position: fixed;
     top: 50%;
@@ -150,13 +150,14 @@ textarea::placeholder {
     transform: translate(-50%, -50%);
     z-index: 10;
     overflow-y: auto;
+    align-items: center;
+    justify-content: center;
 }
 
-.fixed.show {
+.modal.show {
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
 }
 
 .modal-content {
@@ -229,7 +230,6 @@ ul {
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
-    
     justify-content: space-between;
     align-items: center;
 }
@@ -277,11 +277,6 @@ ul {
     font-size: 20px;
 }
 
-.item-card p {
-    margin: 10px 0;
-    font-size: 14px;
-}
-
 .spell-card {
     flex: 1 1 calc(33% - 0px);
     border: 1px solid #ccc;
@@ -295,9 +290,4 @@ ul {
 .spell-card h3 {
     margin-top: 0;
     font-size: 20px;
-}
-
-.spell-card p {
-    margin: 10px 0;
-    font-size: 14px;
 }
