--- a/public/Mestre/css/cadastro_itens.css
+++ b/public/Mestre/css/cadastro_itens.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url(/img/img.jpg);
+    background-image: url(../../img/img.jpg);
     background-repeat: none;
     background-size: cover;
 }
