--- a/public/index.css
+++ b/public/index.css
@@ -249,6 +249,73 @@ footer {
     transform: rotate(0deg);
     box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.15);
   }
+/* Footer*/
+.footer-container {
+    background-color: #333333;
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    color: #ffffff;
+}
+
+.footer-logo img {
+    max-width: 150px;
+}
+
+/* Expertise Section */
+.footer-expertise h3 {
+    color: #75d9c3;
+    margin-bottom: 10px;
+}
+
+.footer-expertise ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-expertise ul li {
+    color: #75d9c3;
+    margin-bottom: 5px;
+}
+
+/* Contact Section */
+.footer-contact h3 {
+    color: #75d9c3;
+    margin-bottom: 10px;
+}
+
+.footer-contact p {
+    color: #fff;
+    margin: 5px 0;
+}
+
+.footer-socials a {
+    color: #75d9c3;
+    text-decoration: none;
+    margin-right: 15px;
+    text-align: right;
+}
+
+.footer-socials a:hover {
+    color: #406d9d;
+}
+
+/* Copyright Section */
+.footer-copyright {
+    text-align: center;
+    margin-top: 20px;
+    border-top: 1px solid #75d9c3;
+    padding-top: 10px;
+}
+
+.footer-copyright p {
+    color: #406d9d;
+}
+.git-icon{
+    width: 25px;
+}
 
 /* Responsividade para telas menores */
 @media (max-width: 768px) {
