--- a/public/Jogador/login.css
+++ b/public/Jogador/login.css
@@ -1,4 +1,3 @@
-/* Estilos globais */
 body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -11,7 +10,6 @@ body {
     background-position: center;
 }
 
-/* Estilos para o botão de logout/voltar */
 .back-button {
     position: absolute;
     padding: 0% 2%;
@@ -32,7 +30,7 @@ body {
 .container {
     max-width: 400px;
     width: 90%;
-    margin: 0 auto; /* Centraliza horizontalmente o container na página */
+    margin: 0 auto;
     padding: 0 2rem ;
     background-color: #1a1a1acc;
     border-radius: 10px;
@@ -47,7 +45,7 @@ body {
 
 h2 {
     color: #ffffff;
-    text-align: center; /* Opcional, para centralizar o título */
+    text-align: center;
 }
 
 label {
