--- a/public/Jogador/personagem.css
+++ b/public/Jogador/personagem.css
@@ -13,7 +13,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 25px;
+    padding: 0px 25px;
 }
 
 .logo-container img {
@@ -39,7 +39,23 @@ header {
 }
 
 .back-button:hover {
-    color: #64c8aa;
+    background-color: #64c8aa;
+}
+
+.change-character {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 0.5rem 1rem;
+    font-size: 16px;
+    color: #80e5c8;
+    background-color: #1a1a1acc;
+    border: none;
+    cursor: pointer;
+}
+
+.change-character:hover {
+    background-color: #64c8aa;
 }
 
 h3 {
@@ -294,9 +310,64 @@ p {
     background-color: #1a1a1a;
 }
 
-item-w{
-    
-}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+  }
+  
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
 
 @media (min-width: 700px) {
     .item-card {
